sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value estpluspetit
    if(!estpluspetit(j,j+1)){
        ^